--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<resources>
     <string name="app_name">My Weather</string>
     <string name="format_temp_celsius" translatable="false"> %1.0f °C</string>
     <string name="temp_default">15 °C</string>
     <string name="weather_default">Cloudy</string>
+    <string name="now_label">Now</string>
+    <string name="forecast_label">Forecast</string>
 </resources>
